--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-select": "^2.2.6",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.55.0",
     "@tanstack/react-query": "^5.85.2",
     "@types/d3": "^7.4.3",
