--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-auth": "^4.24.11",
+    "node-fetch": "^2.7.0",
     "react": "19.1.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "19.1.0",
